docs: rewrite IMPLEMENTATION.md as technical guide and enhance sample READMEs
- Transform IMPLEMENTATION.md from project completion report to comprehensive technical architecture guide
- Add 7 major sections: Architecture Overview, Build System, Runtime Implementations, Metrics Integration, Container Awareness, Security Patterns, Design Decisions
- Document design rationales (why 4 Java versions, why RAM percentages, why UBI 9, etc.)
- Add architecture diagrams, technical tables, code examples
- Expand from 396 to 695 lines (+75% technical depth)

- Enhance all 4 sample READMEs (Undertow, Spring Boot, Tomcat, WildFly) with consistent structure
- Add navigation headers linking to all main documentation
- Add "About This Sample" sections explaining runtime selection rationale
- Add "Key Configuration" tables documenting all tuning parameters (Memory, Heap, Threads, Ports)
- Add "Comparing with Other Runtimes" tables for quick reference
- Add "Related Documentation" sections with contextual links
- Increase sample README sizes by 126% average (180 → 407 lines total)